Change to another method to avoid deprecated method